--- a/css/style.css
+++ b/css/style.css
@@ -67,10 +67,10 @@ header {
     margin-left: auto;
 }
 
-.row {
-    margin-right: auto;
-    margin-left: auto;
-    width: 100%;
+.row > h1 {
+    color: #000;
+    font-size: 20px;
+    font-weight: bold;
 }
 
 p {
@@ -191,7 +191,7 @@ nav {
     /* positioning */
     display: block;
     /* styling: */
-    background: rgba(44, 44, 44 ,0.0);
+    background: rgba(44, 44, 44, 0.0);
     /*  grey */
     padding: 8px 14px;
     text-decoration: none;
@@ -200,7 +200,7 @@ nav {
 
 .navigation > ul > li > a:hover {
     /* styling: */
-    background: rgba(252, 0, 0,0.0);
+    background: rgba(252, 0, 0, 0.0);
     /* grey */
     color: #FFF;
     /* light grey */
@@ -232,7 +232,7 @@ nav {
 /* if you want different styling for tertiary menus, just copy the 4 rules below and insert an additional ul: for example: ".navigation ul ul li", becomes: ".navigation ul ul ul li" */
 
 .navigation ul ul li {
-    background: rgba(234,234,234, 0.8);
+    background: rgba(234, 234, 234, 0.8);
     /* grey */
     width: auto;
     -webkit-transition: background-color 0.3s ease;
@@ -278,7 +278,8 @@ MOBILENAV
 */
 
 .mobile {
-    display: none; /* GÖMMER MOBILNAVEN*/
+    display: none;
+    /* GÖMMER MOBILNAVEN*/
     position: fixed;
     width: 100%;
     top: 0;
@@ -288,32 +289,8 @@ MOBILENAV
     display: none;
 }
 
-.mobile.button {
-    position: absolute;
-    top: 15px;
-    right: 15px;
-    text-indent: 200%;
-    overflow: hidden;
-    background: rgba(255, 255, 255, 0.8);
-    border: 1px solid #ddd;
-    border-radius: 15%;
-    background-size: 80%;
-    padding: 0px 0px 0px 0px;
-    outline: none;
-    -webkit-transition: all 400ms ease;
-    transition: all 400ms ease;
-}
-
-.mobile.button.expanded {
-    -webkit-transform: rotate(90deg);
-    -ms-transform: rotate(90deg);
-    transform: rotate(90deg);
-    background-color: transparent;
-    border: 0;
-}
-
-.mobile a {
-    display: block;
+button {
+    display: none;
 }
 
 
@@ -408,7 +385,6 @@ IMAGES
 
 #social-section {
     float: left;
-
 }
 
 .scl {
@@ -471,3 +447,6 @@ footer {
 a:hover.back-to-top {
     background-color: #000;
 }
+/*
+TEST
+*/
